fix spacing and color mismatch

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,6 +25,7 @@ $box-padding: 60px;
 
 .avatar {
     display: block;
+    margin-bottom: 30px;
 
     img {
         width: 128px;
@@ -85,12 +86,17 @@ section.about {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%23ee7a11' width='11' height='11'/%3E%3Crect fill='%23ee7912' x='10' width='11' height='11'/%3E%3Crect fill='%23ee7814' y='10' width='11' height='11'/%3E%3Crect fill='%23ef7715' x='20' width='11' height='11'/%3E%3Crect fill='%23ef7616' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%23ef7618' y='20' width='11' height='11'/%3E%3Crect fill='%23ef7519' x='30' width='11' height='11'/%3E%3Crect fill='%23ef741a' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%23f0731b' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%23f0721c' y='30' width='11' height='11'/%3E%3Crect fill='%23f0711d' x='40' width='11' height='11'/%3E%3Crect fill='%23f0701e' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%23f06f1f' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%23f06e20' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%23f06e21' y='40' width='11' height='11'/%3E%3Crect fill='%23f06d22' x='50' width='11' height='11'/%3E%3Crect fill='%23f16c23' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%23f16b24' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%23f16a25' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%23f16926' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%23f16827' y='50' width='11' height='11'/%3E%3Crect fill='%23f16728' x='60' width='11' height='11'/%3E%3Crect fill='%23f16628' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%23f16529' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%23f1652a' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%23f1642b' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%23f1632c' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%23f1622d' x='70' width='11' height='11'/%3E%3Crect fill='%23f1612e' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%23f1602e' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%23f15f2f' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%23f15e30' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%23f15d31' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%23f15c32' x='80' width='11' height='11'/%3E%3Crect fill='%23f15c32' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%23f15b33' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%23f15a34' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%23f15935' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%23f15835' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%23f15736' x='90' width='11' height='11'/%3E%3Crect fill='%23f15637' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%23f15538' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%23f15439' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%23f15339' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%23f0523a' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%23f0523b' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%23f0513c' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%23f0503c' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%23f04f3d' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%23f04e3e' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%23f04d3e' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23f04c3f' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23ef4b40' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23ef4a41' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23ef4941' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%23ef4942' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%23ef4843' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23ee4744' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23ee4644' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23ee4545' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
     background-size: cover;
     background-attachment: fixed;
+    padding: 48px 28px 150px;
 }
 
 section.skillset {
     background-color: #ffffff;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23f0f0f0'/%3E%3Cstop offset='1' stop-color='%23e6e6e6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='23' height='23' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='11.5' cy='11.5' r='11.5'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.25'/%3E%3C/svg%3E");
     background-size: cover;
+
+    .skillset-content {
+        margin-top: -150px;
+    }
 }
 
 // section.skillset:hover {
